<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modeColor"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="2dp"
    android:paddingEnd="10dp"
    android:paddingBottom="20dp"
    tools:context="com.abhi.noteIt.AddEditNoteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/datetime_background"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="6dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:padding="2dp"
                android:text="@string/demo_date"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/normal"
                android:padding="2dp"
                android:text="@string/demo_time"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp" />


        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center|end"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="4dp"-->
<!--                android:fontFamily="@font/normal"-->
<!--                android:text="Priority :"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--                android:textColor="@color/primaryTextColor"-->
<!--                android:textSize="15sp" />-->

<!--            <Spinner-->
<!--                android:id="@+id/spinnerPriority"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/style_spinner"-->
<!--                android:entries="@array/priorityList"-->
<!--                android:popupBackground="@color/modeColor" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_text">

                <AutoCompleteTextView
                    android:id="@+id/priorityMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text"
                    android:fontFamily="@font/bold"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

<!--        </LinearLayout>-->
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/title"
        android:textColorHint="#c1c2c4"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/MyHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/description"
        android:textColorHint="#c1c2c4"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/MyHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>